# Parallel_Mind

./: .coverage  .env.example  LICENSE  README.md  architecture.md  pyproject.toml  requirements.txt  reuirements.txt
cli/: __init__.py  display.py  main.py  run_config.py  test_cli.py  wizard.py
cli/commands/: __init__.py  config_cmd.py  providers_cmd.py  research_cmd.py  review_cmd.py
config/: __init__.py  effort_presets.py  model_catalog.yaml  routing_table.py  settings.py
core/: __init__.py  agent_base.py  executor.py  models.py  orchestrator.py
core/aggregation/: __init__.py  base.py  strategies.py
core/providers/: __init__.py  anthropic_provider.py  base.py  circuit_breaker.py  key_pool.py  model_catalog.py  openai_compatible.py  registry.py
core/router/: __init__.py  candidate_rotation.py  policies.py  router.py  routing_mode.py
core/state/: __init__.py  shared_context.py
pipelines/code_review/: __init__.py  aggregator.py  pipeline.py  reviewer_agent.py  splitter.py
pipelines/research/: __init__.py  aggregator.py  pipeline.py  planner.py  researcher_agent.py
tests/: test_aggregation.py  test_candidate_rotation.py  test_circuit_breaker.py  test_executor_failover.py  test_key_pool.py  test_policies.py
utils/: __init__.py  logger.py  validation.py
