[project]
name = "parallelmind"
version = "0.1.0"
description = "Lightweight parallel AI agent orchestration framework"
requires-python = ">=3.11"

[project.scripts]
parallelmind = "cli.main:app"

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
